chore(deps): update FontAwesome free to v7
FontAwesome does not ship `.woff` fonts, only `.woff2`.

See <https://fontawesome.com/v7/changelog>.

--- a/client/css/fontawesome.css
+++ b/client/css/fontawesome.css
@@ -3,7 +3,5 @@
 	font-family: FontAwesome;
 	font-weight: normal;
 	font-style: normal;
-	src:
-		url("../fonts/fa-solid-900.woff2") format("woff2"),
-		url("../fonts/fa-solid-900.woff") format("woff");
+	src: url("../fonts/fa-solid-900.woff2") format("woff2");
 }
