style(css): update stylelint to v16
Manual changes:
- removed `indentation` rule (stylelint/stylelint#6504, stylelint/stylelint#6979)
- deprecated property `clip` no autofixed (stylelint/stylelint#8699)
- removed deprecated `word-break: break-word` (stylelint/stylelint#8223)

Automatic changes:
- `import-notation` now uses `"url"` (stylelint/stylelint-config-standard#266)
- use `inset` instead of `top` `right` `bottom` `left`  (stylelint/stylelint#6699)
- use `overflow-wrap` instead of `word-wrap` (stylelint/stylelint#8682)
- added `media-feature-range-notation` (stylelint/stylelint-config-standard#284)

Configuration now in ESM format (https://stylelint.io/migration-guide/to-16).

--- a/client/themes/default.css
+++ b/client/themes/default.css
@@ -15,7 +15,7 @@
 	box-shadow: 0 0 25px rgb(0 0 0 / 50%);
 }
 
-@media (max-width: 768px) {
+@media (width <= 768px) {
 	#loading .window {
 		margin: 0;
 	}
